--- a/resume/main.tex
+++ b/resume/main.tex
@@ -100,16 +100,17 @@
 \section{\sc Work Experience}
 
 \vspace{2pt}
+
+\resumeSubheading{{\bf Clever}}{San Fransisco, CA}
+                 {Software Engineer, Infrastructure}{September 2022 -- Present}
                  
 \resumeSubheading{{\bf Rivet Health}}{Sandy, UT}
-                 {Software Engineer}{June 2021 -- Present}
+                 {Software Engineer}{June 2021 -- September 2022}
                  
 \begin{list2}
 \item{Contributed to an established SaaS application in Angular, Node.js, and TypeScript}
 \item{Interacted with third-party APIs to synchronize patient, payers, and appointment information}
-\item{Troubleshooted and optimized PostgreSQL queries}
 \item{Developed a CLI program in Go to manage our AWS infrastructure}
-\item{Utilized Datadog and Sentry to identify pain-points in our application}
 \item{Migrated sections of Rivet's build system from Make to Bazel to increase build and testing performance}
 \end{list2}
 
@@ -128,7 +129,7 @@
 \begin{list2}
 \item{Innovated methods in Java and Python to generate video game dungeons based off of \emph{The Legend of Zelda}}
 \item{Conducted a user study to compare AI generated and human-produced dungeons}
-\item{Presented results to the World Conference on Computation Intelligence in a published paper and presentation}
+\item{Presented results to the World Conference on Computation Intelligence in a published paper and \\presentation}
 \end{list2}
 
 % \vspace{0.15in}
@@ -137,10 +138,7 @@
 \vspace{2pt}
 
 \resumeSubheading{Southwestern University}{Georgetown, TX}
-             {Bachelor of Arts in Computer Science, Minor in Business}{Aug. 2018 -- May 2021}
-
-\resumeSubheading{Blinn College}{Bryan, TX}
-             {Associate of Arts in Liberal Arts}{Aug. 2014 -- May 2018}
+             {Bachelor of Arts in Computer Science}{May 2021}
 
 \section{\sc Projects}
 
@@ -165,9 +163,9 @@
 
 \section{\sc Technical Skills}
 
-\textbf{Languages}{: Java, Python, SQL (Postgres), Go, TypeScript, HTML/CSS, \LaTeX} \\
+\textbf{Languages}{: Go, TypeScript, Terraform, PostgreSQL, Python, Java, \LaTeX} \\
 \textbf{Frameworks}{: React, Angular, Node.js, Flask, FastAPI} \\
-\textbf{Developer Tools}{: Git, Docker, Google Cloud Platform, Make, Bazel} \\
+\textbf{Developer Tools}{: Git, Docker, AWS, Make, Bazel} \\
 
 
 \vspace{0.2in}
