--- a/resume/main.tex
+++ b/resume/main.tex
@@ -102,10 +102,10 @@
 \vspace{2pt}
 
 \resumeSubheading{{\bf Clever}}{San Fransisco, CA}
-                 {Software Engineer, Infrastructure}{September 2022 -- Present}
+                 {Software Engineer, Infrastructure}{Sep. 2022 -- Present}
                  
 \resumeSubheading{{\bf Rivet Health}}{Sandy, UT}
-                 {Software Engineer}{June 2021 -- September 2022}
+                 {Software Engineer}{June 2021 -- Sep. 2022}
                  
 \begin{list2}
 \item{Contributed to an established SaaS application in Angular, Node.js, and TypeScript}
