--- a/resume/main.tex
+++ b/resume/main.tex
@@ -1,174 +1,164 @@
-\documentclass[margin, 11pt]{res}
+\documentclass[letterpaper,11pt]{article}
 
-% \usepackage{feynmf}
-\usepackage[usenames, dvipsnames]{color}
-\usepackage{amsmath}
-\usepackage{hyperref}
+\usepackage{latexsym}
+\usepackage[empty]{fullpage}
+\usepackage{titlesec}
+\usepackage{marvosym}
+\usepackage[usenames,dvipsnames]{color}
+\usepackage{verbatim}
+\usepackage{enumitem}
+\usepackage[hidelinks]{hyperref}
+\usepackage{fancyhdr}
+\usepackage[english]{babel}
+\usepackage{tabularx}
+\input{glyphtounicode}
 
-\usepackage{fontspec}
-
-\usepackage[T1]{fontenc}
-\usepackage[usefilenames,RMstyle={Text,Semibold},SSstyle={Text,Semibold},TTstyle={Text,Semibold},DefaultFeatures={Ligatures=Common}]{plex-otf} %
-\renewcommand*\familydefault{\sfdefault} %% Only if the base font of the document is to be sans serif
-
-% \usepackage[sfdefault]{noto-sans}
-% \usepackage[default]{sourcesanspro}
-
+% Adjust margins
 \addtolength{\oddsidemargin}{-0.5in}
 \addtolength{\evensidemargin}{-0.5in}
 \addtolength{\textwidth}{1in}
-\addtolength{\topmargin}{-0.25in}
-\addtolength{\textheight}{0.5in}
+\addtolength{\topmargin}{-.5in}
+\addtolength{\textheight}{1.0in}
 
-\pagenumbering{gobble}
+\urlstyle{same}
+\raggedbottom
+\raggedright
+\setlength{\tabcolsep}{0in}
 
-\definecolor{darkcerulean}{rgb}{0.03, 0.27, 0.49}
-\definecolor{cobalt}{rgb}{0.0, 0.28, 0.67}
-\definecolor{blue(pigment)}{rgb}{0.2, 0.2, 0.6}
-\definecolor{airforceblue}{rgb}{0.36, 0.54, 0.66}
-\definecolor{coolblack}{rgb}{0.0, 0.18, 0.39}
-\hypersetup{colorlinks=true, urlcolor=darkcerulean}
+% Sections formatting
+\titleformat{\section}{
+  \vspace{-4pt}\scshape\raggedright\large
+}{}{0em}{}[\color{black}\titlerule \vspace{-5pt}]
 
-\newcommand{\li}{https://linkedin.com/in/jakegut}
-\newcommand{\gh}{https://github.com/jakegut}
-\newcommand{\personalsite}{https://jakegut.com}
+% Custom commands
+\newcommand{\resumeItem}[1]{
+  \item\small{
+    {#1 \vspace{-2pt}}
+  }
+}
 
-
-\oddsidemargin -.5in
-\evensidemargin -.5in
-\textwidth=6.0in
-\itemsep=0in
-\parsep=0in
-\newsectionwidth{1in}
+\newcommand{\resumeSubItem}[1]{\resumeItem{#1}\vspace{-4pt}}
 
 \newcommand{\resumeSubheading}[4]{
-
-\begin{tabular*}{1.01\textwidth}{@{\hspace{-4pt}}l @{\extracolsep{\fill}} r}
-\textbf{#1} & #2 \\
-      {#3} &  {#4}
-\end{tabular*}\vspace{-2pt}
+  \vspace{-2pt}\item
+    \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
+      \textbf{#1} & #2 \\
+      \textit{\small#3} & \textit{\small #4} \\
+    \end{tabular*}\vspace{-7pt}
 }
 
-\newcommand{\resumeSubSubheading}[2]{
-\begin{tabular*}{1.01\textwidth}{@{\hspace{-4pt}}l @{\extracolsep{\fill}} r}
-    #1 & #2 
-\end{tabular*}\vspace{-7pt}
-}
+\newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=0.15in, label={$\bullet$}]}
+\newcommand{\resumeSubHeadingListEnd}{\end{itemize}}
+\newcommand{\resumeItemListStart}{\begin{itemize}[label={$\bullet$}]}
+\newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
 
-% if using pdflatex:
-% \setlength{\pdfpagewidth}{\paperwidth}
-% \setlength{\pdfpageheight}{\paperheight}
-%
-\newenvironment{list1}{
-	\begin{list}{\ding{113}}{%
-		\setlength{\itemsep}{0in}
-		\setlength{\parsep}{0in} \setlength{\parskip}{0in}
-		\setlength{\topsep}{0in} \setlength{\partopsep}{0in}
-		\setlength{\leftmargin}{0.17in}}}{\end{list}}
-\newenvironment{list2}{
-	\begin{list}{$\bullet$}{%
-	    \small
-		\setlength{\itemsep}{0in}
-		\setlength{\parsep}{0in} \setlength{\parskip}{0in}
-		\setlength{\topsep}{0in} \setlength{\partopsep}{0in}
-		\setlength{\leftmargin}{0.2in}}}{\end{list}}
-
+% Resume Starts Here
 \begin{document}
 
-\name{
-	{\Huge \scshape Jake Gutierrez}
-	\vspace{2pt}
-	}
-\address{
-    \small 979-676-3030 $|$ 
-    \href{mailto:jakegut0108@gmail.com}{jakegut0108@gmail.com} $|$ 
-    \href{\li}{linkedin.com/in/jakegut} $|$
-    \href{\gh}{github.com/jakegut}
-}
+%-----------HEADING-----------
+\begin{center}
+    \textbf{\Huge \scshape Harish Vadaparty} \\ \vspace{1pt}
+    \small 123-456-7890 $|$ \href{mailto:x@x.com}{\underline{harishvadaparty@gmail.com}} $|$ 
+    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/yourprofile}} $|$
+    \href{https://github.com/...}{\underline{github.com/yourgithub}}
+\end{center}
 
-\begin{resume}
-% \section{\sc Contact Information}
-% \vspace{.05in}
-% \begin{tabular}{@{}p{3.17in}p{4in}}
-% 	\href{\li}{linkedin.com/in/jakegut} & \href{\gh}{github.com/jakegut}\\
-%     \href{mailto:jakegut0108@gmail.com}{jakegut0108@gmail.com} & \href{\personalsite}{jakegut.com}\\
-%      (979) 676-3030
-%     %  (123) 456-7890
-%         % & Available to start from Nov 1st\\
-% \end{tabular}
+%-----------EDUCATION-----------
+\section{Education}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Lendi Institute of Engineering \& Technology}{Vizianagaram, India}
+      {Bachelor of Technology in Computer Science \& Engineering; CGPA: 8.0/10.0}{Month Year -- Month Year}
+    \resumeSubheading
+      {Bhashyam Junior College}{Vizag, India}
+      {XIIth Standard, Ap State Board; Percentage: 95\%}{Month Year -- Month Year}
+  \resumeSubHeadingListEnd
 
-\section{\sc Work Experience}
+%-----------EXPERIENCE-----------
+\section{Experience}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Backend Developer and Architect}{Month Year -- Present}
+      {Hexon Global}{Location}
+      \resumeItemListStart
+        \resumeSubItem{Project: \textbf{Mastbazaar.com}}
+        \resumeItemListStart
+          \resumeItem{Contributed to the development of a comprehensive grocery delivery app using Python, Node.js, and microservices architecture.}
+          \resumeItem{Focused on building scalable and efficient backend systems to handle real-time order processing and delivery tracking.}
+        \resumeItemListEnd
+        \resumeSubItem{Project: \textbf{Oddzy}}
+        \resumeItemListStart
+          \resumeItem{Involved in architecting and developing a crypto option trading and betting platform.}
+          \resumeItem{Implemented key features for order matching algorithms and integrated web3 technologies for transaction processing.}
+          \resumeItem{Collaborated in developing a trade engine, enhancing the capability for handling multiple concurrent trades and event matching.}
+          \resumeItem{Utilized Redis for effective caching strategies, significantly improving data retrieval and system responsiveness.}
+          \resumeItem{Facilitated integration of web2 and web3 transactions, employing Alchemy SDK and MoonPay for efficient financial operations.}
+        \resumeItemListEnd
+      \resumeItemListEnd
+    
+    % Board Infinity Internship
+    \resumeSubheading
+      {SDE Intern (Frontend)}{Start Month Year -- End Month Year}
+      {Board Infinity}{Location}
+      \resumeItemListStart
+        \resumeItem{Built features for the Product App using Flutter with clean Bloc State Management.}
+        \resumeItem{Maintained and enhanced an existing React Native App with redux.}
+        \resumeItem{Worked on LMS, Discussion Forum, and Events, and integrated Video Interface and WebEngage Analytics.}
+        \resumeItem{Implemented Sentry for Logging, UXCam, and Firebase Notifications for the app.}
+      \resumeItemListEnd
 
-\vspace{2pt}
+    % Futuryze Digital Venture Studio Internship
+    \resumeSubheading
+      {Software Developer - Intern}{Start Month Year -- End Month Year}
+      {Futuryze Digital Venture Studio}{Location}
+      \resumeItemListStart
+        \resumeItem{Collaborated in a team of 3 to develop an educational app using GetX State Management.}
+        \resumeItem{Translated client needs and UX designs into functional app features, implementing API fetching and MVVM architecture.}
+        \resumeItem{Optimized app performance by 50\% through enhanced data fetching and reusability techniques.}
+        \resumeItem{Implemented app versions (Flavours) for different clients and user types (Learner, Creator).}
+        \resumeItem{Managed multimedia data integration and implemented file uploads and error handling in the app.}
+      \resumeItemListEnd
+  \resumeSubHeadingListEnd
 
-\resumeSubheading{{\bf Clever}}{San Fransisco, CA}
-                 {Software Engineer, Infrastructure}{Sep. 2022 -- Present}
-                 
-\resumeSubheading{{\bf Rivet Health}}{Sandy, UT}
-                 {Software Engineer}{June 2021 -- Sep. 2022}
-                 
-\begin{list2}
-\item{Contributed to an established SaaS application in Angular, Node.js, and TypeScript}
-\item{Interacted with third-party APIs to synchronize patient, payers, and appointment information}
-\item{Developed a CLI program in Go to manage our AWS infrastructure}
-\item{Migrated sections of Rivet's build system from Make to Bazel to increase build and testing performance}
-\end{list2}
+%-----------TECHNICAL SKILLS-----------
+\section{Technical Skills}
+ \begin{itemize}[leftmargin=0.15in, label={$\bullet$}]
+    \small{\item{
+     \textbf{Languages}{: C/C++, Python, Java, JavaScript/TypeScript, Go, Dart} \\
+     \textbf{Frameworks}{: Flutter, React, Node.js, Gin} \\
+     \textbf{Databases}{: PostgreSQL, Redis, MongoDB} \\
+     \textbf{Cloud Platforms}{: AWS, GCP} \\
+    }}
+ \end{itemize}
 
-\resumeSubheading{{\bf Texas A\&M Engineering Experiment Station}}{College Station, TX}
-                 {Software Developer}{June 2020 -- May 2021}
+%-----------PROJECTS-----------
+\section{Projects}
+    \resumeSubHeadingListStart
+      \resumeSubItem{\textbf{Scalable Go-Based File Management System}}
+        \resumeItemListStart
+          \resumeItem{Developed a scalable, distributed file system in Go, designed to handle large-scale data storage and retrieval.}
+          \resumeItem{Implemented efficient communication protocols using gRPC and implemented Kafka for robust message queuing.}
+          \resumeItem{Deployed the system using Docker, focusing on high availability and scalability across various environments.}
+        \resumeItemListEnd
+      \resumeSubItem{\textbf{Node.js Real-Time Data Visualization Tool}}
+        \resumeItemListStart
+          \resumeItem{Created a Node.js-based analytics dashboard for real-time data monitoring and visualization.}
+          \resumeItem{Employed WebSockets for live data updates and Redis for high-speed data caching and retrieval.}
+          \resumeItem{Ensured consistent performance and easy scalability by containerizing the application with Docker.}
+        \resumeItemListEnd
+      \resumeSubItem{\textbf{Python Automated Data Workflow Pipeline}}
+        \resumeItemListStart
+          \resumeItem{Designed an automated data pipeline in Python to streamline data processing and transformation tasks.}
+          \resumeItem{Integrated Celery with RabbitMQ for efficient task queueing and asynchronous execution.}
+          \resumeItem{Leveraged Docker to containerize the pipeline, enhancing deployment flexibility and scalability.}
+        \resumeItemListEnd
+    \resumeSubHeadingListEnd
 
-\begin{list2}
-\item{Designed and implemented a REST API to store data from learning management systems }
-\item{Developed full-stack web application using Python with Flask, React and PostgreSQL that asynchronously analyzes GitHub interactions }
-\item{Designed API end points to provide data visualizations of GitHub participation }
-\end{list2}
+%-----------ACHIEVEMENTS-----------
+\section{Achievements}
+    \resumeSubHeadingListStart
+      \resumeItem{AWS Certified Cloud Practitioner - Validation Number: WL78T7D25MQQ1C30}
+      % Add more achievements if you have any
+    \resumeSubHeadingListEnd
 
-\resumeSubheading{Southwestern University}{Georgetown, TX}
-             {Artificial Intelligence Research Assistant}{May 2019 -- July 2020}
-
-\begin{list2}
-\item{Innovated methods in Java and Python to generate video game dungeons based off of \emph{The Legend of Zelda}}
-\item{Conducted a user study to compare AI generated and human-produced dungeons}
-\item{Presented results to the World Conference on Computation Intelligence in a published paper and \\presentation}
-\end{list2}
-
-% \vspace{0.15in}
-\section{\sc Education}
-
-\vspace{2pt}
-
-\resumeSubheading{Southwestern University}{Georgetown, TX}
-             {Bachelor of Arts in Computer Science}{May 2021}
-
-\section{\sc Projects}
-
-\resumeSubSubheading{\textbf{Southwestern University Tutor App}}{Jan. 2021 -- June 2021}
-
-\begin{list2}
-\item{Designed and developed a RESTful API using FastAPI and PostgreSQL}
-\item{Utilized Docker and GitHub Actions to implement a CI/CD workflow to deploy to Google Cloud Run}
-\item{Led a team of three-members to develop the backend through pair programming and code reviews}
-\item{Implemented Scrum and Kanban models for a six person team to speed up development}
-\end{list2}
-
-\resumeSubSubheading{\textbf{Gitlytics}}{June 2020 -- May 2021}
-
-\begin{list2}
-\item{Designed a full-stack web application and developed it using Flask with React}
-\item{Utilized GitHub OAuth and Webhooks to get data from users' repositories}
-\item{Visualized GitHub data to show collaboration between contributors}
-\item{Implemented asynchronous tasks with Celery and Redis}
-\end{list2}
-
-
-\section{\sc Technical Skills}
-
-\textbf{Languages}{: Go, TypeScript, Terraform, PostgreSQL, Python, Java, \LaTeX} \\
-\textbf{Frameworks}{: React, Angular, Node.js, Flask, FastAPI} \\
-\textbf{Developer Tools}{: Git, Docker, AWS, Make, Bazel} \\
-
-
-\vspace{0.2in}
-
-\end{resume}
 \end{document}
